# petrify

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN-google-drive-api-adapter.md  README.md  biome.json  example2_output.excalidraw  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  versions.json  vitest.config.ts
.gemini/: config.yaml  styleguide.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: future-improvements.md  installation.md  vision.md
docs/milestones/: v1.0-roadmap.md
docs/plans/: 2025-02-03-monorepo-design.md  2026-02-02-color-extraction-from-mainbmp.md  2026-02-02-converter-improvement.md  2026-02-02-petrify-converter-design.md  2026-02-02-petrify-converter-implementation.md  2026-02-02-stroke-rendering-fix.md  2026-02-02-stroke-width-extraction.md  2026-02-02-stroke-width-outlier-filter.md  2026-02-02-stroke-width-scaling.md  2026-02-05-plugin-logging.md  (+31 more)
examples/: Claude.md 유저 레벨 지침_NoteFileInfo.json  Claude.md 유저 레벨 지침_PageListFileInfo.json  path_d98c2f72-65c1-48c0-a27c-a99e8daf7f1c.json
scripts/: convert.py
src/: color-extractor.ts  excalidraw-md.ts  excalidraw.ts  exceptions.ts  index.ts  parser.ts
tests/: conftest.py  excalidraw-md.test.ts  excalidraw.test.ts  integration.test.ts  parser.test.ts  test_color_extractor.py  test_converter.py  test_excalidraw.py  test_excalidraw_md.py  test_exceptions.py  test_integration.py  test_parser.py
(+66 files in other folders)
