[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petrify-converter"
version = "0.1.0"
description = "viwoods note to Excalidraw converter"
requires-python = ">=3.11"
dependencies = [
    "lzstring>=1.0.4",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/petrify_converter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
